feat(Home): optimise text

--- a/app/locales/de/home.json
+++ b/app/locales/de/home.json
@@ -30,7 +30,7 @@
   "valueProposition": {
     "title": "Engineering",
     "titleAccent": "Exzellenz",
-    "description1": "Ich überbrücke die Lücke zwischen <strong>technischer Exzellenz und Geschäftswert</strong>. Mit einem Jahrzehnt Erfahrung im Aufbau und der Führung von Engineering-Teams helfe ich Organisationen, Software zu entwickeln, die skaliert—sowohl technisch als auch organisatorisch.",
+    "description1": "Ich optimiere den gesamten Wertstrom—von der Führungsstrategie bis zu nutzerorientierten Features—reduziere die Durchlaufzeit und maximiere die Geschäftswirkung.",
     "description2": "Mein Ansatz kombiniert tiefes technisches Fachwissen mit einem starken Fokus auf Teamdynamik, Developer Experience und nachhaltige Engineering-Praktiken.",
     "skills": [
       "TypeScript",
