--- a/app/locales/en/home.json
+++ b/app/locales/en/home.json
@@ -30,7 +30,7 @@
   "valueProposition": {
     "title": "Engineering",
     "titleAccent": "Excellence",
-    "description1": "I bridge the gap between <strong>technical excellence and business value</strong>. With a decade of experience building and leading engineering teams, I help organizations create software that scales—both technically and organizationally.",
+    "description1": "I optimize the entire value stream—from executive strategy to user-facing features—reducing cycle time and maximizing business impact.",
     "description2": "My approach combines deep technical expertise with a strong focus on team dynamics, developer experience, and sustainable engineering practices.",
     "skills": [
       "TypeScript",
